// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App /admin renders logged in ea properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-fcmMJX jQCWdH"
  >
    <div
      class="bp3-navbar sc-dlnjwi cHgPdZ"
    >
      <div
        class="sc-gtsrHT sc-jSFjdj iTEKWG hFvGVt"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Election Results Reporting, by VotingWorks"
                class="logo-desktop"
                src="/elrep.png"
              />
              <img
                alt="Election Results Reporting, by VotingWorks"
                class="logo-mobile"
                src="/elrep-mobile.png"
              />
            </a>
          </div>
          <div
            class="bp3-navbar-divider"
          />
        </div>
         
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-hKFxyN eVZvjs"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                aria-haspopup="true"
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-user"
                    icon="user"
                  >
                    <svg
                      data-icon="user"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        user
                      </desc>
                      <path
                        d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    electionadmin@email.org
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bdnxRM igshJj"
    >
      <div
        class="sc-gtsrHT sc-laZMeE iTEKWG cfCfyv"
      >
        <div
          class="sc-iNiQyp iJahkh"
        >
          <h2>
            Create New Election
          </h2>
          <div
            class="sc-cTJkRt BbFqG"
          >
            <label
              for="electionName"
            >
              <p>
                Election name
              </p>
              <div
                class="sc-khIgEk JEuHP sc-jffHpj eTaOsn"
              >
                <div
                  class="bp3-input-group sc-hTRkXV bnsVrK"
                >
                  <input
                    class="bp3-input"
                    id="electionName"
                    name="electionName"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-cTJkRt BbFqG"
          >
            <label
              for="electionDate"
            >
              <p>
                Election date
              </p>
              <div
                class="sc-khIgEk JEuHP sc-jffHpj eTaOsn"
              >
                <div
                  class="bp3-input-group sc-hTRkXV bnsVrK"
                >
                  <input
                    class="bp3-input"
                    id="electionDate"
                    name="electionDate"
                    type="date"
                    value=""
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-cTJkRt BbFqG"
          >
            <label
              class="sc-oeezt cQDmJC"
              for="pollsOpen"
            >
              <p>
                Polls open
              </p>
              <div
                class="sc-khIgEk JEuHP sc-eJocfa ixZLaf"
              >
                <div
                  class="bp3-input-group sc-hTRkXV bnsVrK"
                >
                  <input
                    class="bp3-input"
                    id="pollsOpen"
                    name="pollsOpen"
                    type="time"
                    value=""
                  />
                </div>
              </div>
            </label>
            <label
              class="sc-oeezt cQDmJC"
              for="pollsClose"
            >
              <p>
                Polls close
              </p>
              <div
                class="sc-khIgEk JEuHP sc-eJocfa ixZLaf"
              >
                <div
                  class="bp3-input-group sc-hTRkXV bnsVrK"
                >
                  <input
                    class="bp3-input"
                    id="pollsClose"
                    name="pollsClose"
                    type="time"
                    value=""
                  />
                </div>
              </div>
            </label>
            <label
              class="sc-oeezt cQDmJC"
              for="pollsTimezone"
            >
              <p>
                Timezone
              </p>
              <div
                class="sc-khIgEk JEuHP sc-jffHpj eTaOsn"
              >
                <div
                  class="bp3-input-group sc-hTRkXV bnsVrK"
                >
                  <input
                    class="bp3-input"
                    id="pollsTimezone"
                    name="pollsTimezone"
                    placeholder="CST"
                    type="text"
                    value="CDT"
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-cTJkRt BbFqG"
          >
            <label
              for="certificationDate"
            >
              <p>
                Certification date
              </p>
              <div
                class="sc-khIgEk JEuHP sc-jffHpj eTaOsn"
              >
                <div
                  class="bp3-input-group sc-hTRkXV bnsVrK"
                >
                  <input
                    class="bp3-input"
                    id="certificationDate"
                    name="certificationDate"
                    type="date"
                    value=""
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-cTJkRt BbFqG"
          >
            <label
              for="jurisdictions"
            >
              <p>
                Participating jurisdictions
              </p>
              <label
                class="bp3-file-input bp3-fill"
              >
                <input
                  accept=".csv"
                  name="jurisdictions"
                  type="file"
                />
                <span
                  class="bp3-file-upload-input"
                >
                  Select a CSV...
                </span>
              </label>
            </label>
          </div>
          <div
            class="sc-cTJkRt BbFqG"
          >
            <label
              for="definition"
            >
              <p>
                Election definition
              </p>
              <label
                class="bp3-file-input bp3-fill"
              >
                <input
                  accept=".json"
                  name="definition"
                  type="file"
                />
                <span
                  class="bp3-file-upload-input"
                >
                  Select a JSON...
                </span>
              </label>
            </label>
          </div>
          <button
            class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-bBjRSN sZdJk"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Create New Election
            </span>
          </button>
        </div>
        <div
          class="sc-hhIiOg btNexi"
        >
          <h2>
            Active Elections
          </h2>
          <div>
            <h4>
              Organization 1
            </h4>
            <p>
              You haven't created any elections yet for 
              Organization 1
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /admin renders logged in ja properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-fcmMJX jQCWdH"
  >
    <div
      class="bp3-navbar sc-dlnjwi cHgPdZ"
    >
      <div
        class="sc-gtsrHT sc-jSFjdj iTEKWG hFvGVt"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Election Results Reporting, by VotingWorks"
                class="logo-desktop"
                src="/elrep.png"
              />
              <img
                alt="Election Results Reporting, by VotingWorks"
                class="logo-mobile"
                src="/elrep-mobile.png"
              />
            </a>
          </div>
          <div
            class="bp3-navbar-divider"
          />
        </div>
         
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-hKFxyN eVZvjs"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                aria-haspopup="true"
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-user"
                    icon="user"
                  >
                    <svg
                      data-icon="user"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        user
                      </desc>
                      <path
                        d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    jurisdictionadmin@email.org
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bdnxRM igshJj"
    >
      <div
        class="sc-gtsrHT sc-laZMeE iTEKWG cfCfyv"
      >
        <div
          class="sc-eirqVv dVEjfH"
        >
          <h2>
            Election wise Jurisdictions
          </h2>
          <div>
            <h2>
              Election 1-
            </h2>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary"
              href="/election/election-id-1/jurisdiction/jurisdiction-id-1/results"
              style="justify-content: start; margin-bottom: 15px;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Jurisdiction 1
              </span>
            </button>
          </div>
          <div>
            <h2>
              Election 2-
            </h2>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary"
              href="/election/election-id-2/jurisdiction/jurisdiction-id-2/results"
              style="justify-content: start; margin-bottom: 15px;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Jurisdiction 2
              </span>
            </button>
          </div>
          <div>
            <h2>
              Election 3-
            </h2>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary"
              href="/election/election-id-3/jurisdiction/jurisdiction-id-3/results"
              style="justify-content: start; margin-bottom: 15px;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Jurisdiction 3
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /admin renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-fcmMJX jQCWdH"
  >
    <div
      class="bp3-navbar sc-dlnjwi cHgPdZ"
    >
      <div
        class="sc-gtsrHT sc-jSFjdj iTEKWG hFvGVt"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Election Results Reporting, by VotingWorks"
                class="logo-desktop"
                src="/elrep.png"
              />
              <img
                alt="Election Results Reporting, by VotingWorks"
                class="logo-mobile"
                src="/elrep-mobile.png"
              />
            </a>
          </div>
          <div
            class="bp3-navbar-divider"
          />
        </div>
         
        <div
          class="bp3-navbar-group bp3-align-right"
        />
      </div>
    </div>
    <div
      class="sc-fuISkM krVnkZ"
    >
      <img
        alt="Election Results Reporting, by VotingWorks"
        height="50px"
        src="/elrep.png"
      />
      <div
        class="bp3-card bp3-elevation-0"
        style="margin: 25px 0px 15px 0px;"
      >
        <p>
          Participating in an election in your local jurisdiction?
        </p>
        <a
          class="bp3-button bp3-large bp3-intent-primary"
          href="/auth/jurisdictionadmin/start?redirectOnSucess=/admin"
          role="button"
          tabindex="0"
        >
          <span
            class="bp3-button-text"
          >
            Log in to your election
          </span>
        </a>
      </div>
      <div>
        <p>
          Election administrators:
           
          <a
            href="/auth/electionadmin/start?redirectOnSucess=/admin"
          >
            Log in as an admin
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;
